Updated .php pages and fixed typos

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -120,7 +120,7 @@ session_destroy();
                         mForm.elements["pass"].value="";
                         mForm.elements["confirmPassword"].value="";
                         mForm.elements["sex"].value="m";
-                        // mForm.elements["birthdate"].value="";
+                        mForm.elements["birthdate"].value="";
                       
                     }
                 </script>
