Added Clear Btn in Sign up page

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -88,6 +88,7 @@ session_destroy();
                     <input style ="border-radius:  50px; border: solid 2px #062a3c;margin-top: 5px" type="password" placeholder=" Confirm Password" name="confirmPassword" required>
                     <br>
                     <input id="signupBtn" type="button" value ="Sign Up" onclick="SignUp()">
+                    <input id="clearBtn" type="button" value ="Clear" onclick="ClearForm()">
                     <br>
                     <p class="login" style="color: #062a3c;">Already have an account?<a href="index.php"> Login here</a></p>
                 </form>
