--- a/pages/signup.html
+++ b/pages/signup.html
@@ -8,7 +8,7 @@ session_destroy();
 <html>
 
 <head>
-    <link rel="stylesheet" href=".././cv.css">
+    <link rel="stylesheet" href="../cv.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -107,7 +107,7 @@ session_destroy();
                         console.log("username:"+username);
                         console.log("pass:"+pass);
                         console.log("sex:"+sex);
-                        console.log("birthdate:"+birthdate);
+                        console.log("birthday:"+birthdate);
                 
                         if ((pass!=confPass)||(pass==""))
                             alert("Passwords must be equal.");
@@ -116,12 +116,12 @@ session_destroy();
                     }
                     function ClearForm(){
                         var mForm=document.querySelector("form[name='signup-form']");
-                        mForm.elements["fulltname"].value="";
+                        mForm.elements["fullname"].value="";
                         mForm.elements["username"].value="";
-                        mForm.elements["pass"].value="";
+                        mForm.elements["password"].value="";
                         mForm.elements["confirmPassword"].value="";
                         mForm.elements["sex"].value="m";
-                        mForm.elements["birthdate"].value="";
+                        mForm.elements["birthday"].value="";
                       
                     }
                 </script>
