Fixed Sign Up functionality and minor UI fixes

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -63,11 +63,11 @@ session_destroy();
                   
                     <label id="fullname" for="fullname"> <b>Name</b></label>
                     <br>
-                    <input style ="border-radius:  50px; border: solid 2px #062a3c;" type="text" name="fullname" placeholder =" Enter Name" >
+                    <input style ="border-radius:  50px; border: solid 2px #062a3c;padding: 5px;" type="text" name="fullname" placeholder =" Enter Name" >
                     <br><br>
-                    <label  id ="birthday" for ="birthday"><b>Enter Birthday</b></label>
+                    <label  id ="birthday" for ="birthday"  ><b>Enter Birthday</b></label>
                     <br>
-                    <input style ="border-radius:  50px; border: solid 2px #062a3c;" type="date" name ="birthday">
+                    <input style ="border-radius:  50px; border: solid 2px #062a3c;padding: 5px;" type="date" name ="birthday">
                     <br><br>
                     <input type="radio" name="sex"  id="r-male" value="m">
                     <label for="r-male" style="font-size: 17px;color: #062a3c;">Male</label>
@@ -79,13 +79,13 @@ session_destroy();
                      <br><br>
                     <label  id="user" for="username" > <b>Username</b></label>
                     <br>
-                    <input style ="border-radius:  50px; border: solid 2px #062a3c;"  type="text" placeholder=" Enter Username" name="username" required>
+                    <input style ="border-radius:  50px; border: solid 2px #062a3c;padding: 5px;"  type="text" placeholder=" Enter Username" name="username" required>
                     <br><br>
                     <label  id="password" for="password"> <b>Password</b></label>
                     <br>
-                    <input style ="border-radius:  50px; border: solid 2px #062a3c;" type="password" placeholder=" Enter Password" name="password" required>
+                    <input style ="border-radius:  50px; border: solid 2px #062a3c;padding: 5px;" type="password" placeholder=" Enter Password" name="password" required>
                     <br>
-                    <input style ="border-radius:  50px; border: solid 2px #062a3c;margin-top: 5px" type="password" placeholder=" Confirm Password" name="confirmPassword" required>
+                    <input style ="border-radius:  50px; border: solid 2px #062a3c;margin-top: 5px;padding: 5px;" type="password" placeholder=" Confirm Password" name="confirmPassword" required>
                     <br>
                     <input id="signupBtn" type="button" value ="Sign Up" onclick="SignUp()">
                     <input id="clearBtn" type="button" value ="Clear" onclick="ClearForm()">
